# deskhouse

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/api/: auth.rs  channel.rs  client.rs  error.rs  feed.rs  mod.rs  models.rs  profile.rs  settings.rs  social.rs
src-tauri/src/commands/: auth.rs  channel.rs  feed.rs  mod.rs  profile.rs  settings.rs  social.rs
src/components/: Layout.tsx  MessageBubble.tsx  RoomCard.tsx  UserAvatar.tsx
src/lib/: agora.ts  api.ts  types.ts
src/pages/: ClubPage.tsx  ExplorePage.tsx  FeedPage.tsx  LoginPage.tsx  ProfilePage.tsx  RoomPage.tsx  SearchPage.tsx  SettingsPage.tsx
src/stores/: auth.ts  room.ts
src/styles/: global.css
